Signed-off-by: 190159372@qq.com <190159372@qq.com>

--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 				<ul>
 					<li class="active"><span>享品质</span> </li>
 					<li><span>服饰美妆</span> </li>
+					<li><span>家电手机</span> </li>
 					<li><span>电脑数码</span> </li>
 					<li><span>3C运动</span> </li>
 					<li><span>爱吃</span> </li>
-					<li><span>母婴居家</span> </li>
+					<li><span>母婴家居</span> </li>
 					<li><span>图书汽车</span> </li>
-					<li><span>虚拟</span> </li>
-					<li><span>还没逛够</span> </li>
+					<li><span>游戏金融</span> </li>
+					<li><span>旅行健康</span> </li>
 					<li class="last">顶部</li>
 				</ul>
 			</div>
@@ -700,67 +701,148 @@
 						<!--秒杀模块的内容，分两块布局——数据列表和轮播图广告-->
 						<div class="box_bd clear">
 							<!--秒杀模块的数据列表-->
-							<div class="sk-list fl">
-								<div class="control-btn">
-									<a href="javascript:;" class="sk_controls_prev sk_controls_item"><i class="iconfont"></i></a>
-									<a href="javascript:;" class="sk_controls_next sk_controls_item"><i class="iconfont"></i></a>
+							<div class="sk-list fl clear">
+								<a href="javascript:;" class="sk_controls_prev sk_controls_item fl" id="left"><i class="iconfont"></i></a>
+								<div id="list" class="fl clear">
+									<ul class="clear sk-item-ul fl">
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡1</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡2</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡3</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡4</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡5</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="https://img14.360buyimg.com/n4/s130x130_jfs/t9739/350/1293069358/222043/352af0bb/59df1c42N7690dfe0.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡6</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="https://img14.360buyimg.com/n4/s130x130_jfs/t9739/350/1293069358/222043/352af0bb/59df1c42N7690dfe0.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡7</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="https://img14.360buyimg.com/n4/s130x130_jfs/t9739/350/1293069358/222043/352af0bb/59df1c42N7690dfe0.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡8</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡9</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="https://img14.360buyimg.com/n4/s130x130_jfs/t9739/350/1293069358/222043/352af0bb/59df1c42N7690dfe0.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡10</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="https://img14.360buyimg.com/n4/s130x130_jfs/t9739/350/1293069358/222043/352af0bb/59df1c42N7690dfe0.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡11</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡12</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡13</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡14</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+										<li class="sk-item">
+											<div>
+												<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
+													<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡15</p>
+												</a>
+												<span class="sk_item_shadow"></span>
+											</div>
+											<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
+										</li>
+									</ul>
 								</div>
-								<ul class="clear sk-item-ul">
-									<li class="sk-item">
-										<div>
-											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
-												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡1</p>
-											</a>
-											<span class="sk_item_shadow"></span>
-										</div>
-										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
-									</li>
-									<!--<li class="sk-item">
-										<div>
-											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
-												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡2</p>
-											</a>
-											<span class="sk_item_shadow"></span>
-										</div>
-										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
-									</li>
-									<li class="sk-item">
-										<div>
-											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
-												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡3</p>
-											</a>
-											<span class="sk_item_shadow"></span>
-										</div>
-										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
-									</li>
-									<li class="sk-item">
-										<div>
-											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
-												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡4</p>
-											</a>
-											<span class="sk_item_shadow"></span>
-										</div>
-										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
-									</li>
-									<li class="sk-item">
-										<div>
-											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
-												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡5</p>
-											</a>
-											<span class="sk_item_shadow"></span>
-										</div>
-										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
-									</li>
-									<li class="sk-item">
-										<div>
-											<a href="//miaosha.jd.com/#1014500014" target="_blank" class="sk_item_pic_lk"><img src="//img14.360buyimg.com/n4/s130x130_jfs/t14926/310/217781596/794832/6697ca0b/5a275012N5eb59f0b.jpg" alt="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" title="谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡" class="sk_item_img">
-												<p class="sk_item_name">谷源道 海鲜礼盒大礼包3298型海鲜礼券礼品卡6</p>
-											</a>
-											<span class="sk_item_shadow"></span>
-										</div>
-										<p class="sk_item_price"><span class="sk_item_price_new">￥298</span><span class="sk_item_price_origin"><del>1098</del></span></p>
-									</li>-->
-								</ul>
+								<a href="javascript:;" class="sk_controls_next sk_controls_item fl" id="right"><i class="iconfont"></i></a>
 							</div>
 							<!--秒杀模块的轮播图广告-->
 							<div class="sk-special fr">
@@ -785,31 +867,54 @@
 			</div>
 			<div id="mainlt">
 				<!--楼梯内容开始-->
-				<div class="louti" style="background: #cc0033;">
+				<div class="louti" id="xpz">
+					<div class="wrap">
+						<div class="grid_c1 ftit_inner">
+							<h3>享品质</h3></div>
+						<div>
+							<div>
+								<ul class="clear">
+									<li><img src="https://img10.360buyimg.com/babel/s400x170_jfs/t14545/42/501481235/41307/37f8ca63/5a2f72a4N51e67a84.jpg!q90.webp"></li>
+									<li><img src="https://img11.360buyimg.com/babel/s400x170_jfs/t14848/338/573438773/46133/fcbc3bfa/5a311dc4N8327a471.jpg!q90.webp"></li>
+									<li><img src="https://img12.360buyimg.com/babel/s400x170_jfs/t8101/127/1528415295/38442/38254f5a/59bbab97Na203f924.jpg!q90.webp"></li>
+									<li><img src="https://img13.360buyimg.com/babel/s400x170_jfs/t5818/290/1684081062/48818/bf37d5fd/592935aaNf9c009fe.jpg!q90.webp"></li>
+									<li><img src="https://img14.360buyimg.com/babel/s400x170_jfs/t6031/255/909171949/55209/f766749f/592e3193Nd62486d2.jpg!q90.webp"></li>
+									<li><img src="https://img10.360buyimg.com/babel/s400x170_jfs/t5638/114/4044060072/26540/673c2cad/594737f8Na6453e6e.jpg!q90.webp"></li>
+								</ul>
+							</div>
+							<div></div>
+						</div>
+					</div>
 					享品质
 				</div>
-				<div class="louti" style="background: #999933;">
+				<div class="louti">
 					服饰美妆
 				</div>
-				<div class="louti" style="background: #ccff33;">
+				<div class="louti">
+					家电手机
+				</div>
+				<div class="louti">
 					电脑数码
 				</div>
-				<div class="louti" style="background: #006633;">
+				<div class="louti">
 					3C运动
 				</div>
-				<div class="louti" style="background: #6666cc;">
+				<div class="louti">
 					爱吃
 				</div>
-				<div class="louti" style="background: #ff6600;">
-					母婴居家
+				<div class="louti">
+					母婴家居
 				</div>
-				<div class="louti" style="background: #ffff00;">
+				<div class="louti">
 					图书汽车
 				</div>
-				<div class="louti" style="background: #3333ff;">
-					虚拟
+				<div class="louti">
+					游戏金融
 				</div>
-				<div class="louti" style="background: #ff00cc;">
+				<div class="louti">
+					旅行健康
+				</div>
+				<div class="louti">
 					还没逛够
 				</div>
 			</div>
