--- a/details.html
+++ b/details.html
@@ -336,26 +336,29 @@
 						<div class="product clear">
 							<div class="fl preview">
 								<div class="wwrap">
-									<div id="spic" class="spic-n1 ">
-										<img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt=" ">
+									<div id="spic" class="spic-n1">
+										<img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt="">
 										<div id="sf"></div>
 									</div>
 									<div id="bf">
-										<img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt=" " id="bpic">
+										<img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt="" id="bpic">
 									</div>
-									<div class="spec-list clear" id="ulist">
-										<a href="javascript:;" id="left" class="spec-control"></a>
-										<div class="spec-items" id="list">
-											<ul class="clear">
-												<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-												<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-												<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-												<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-												<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-												<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
+									<div id="ulist">
+										<a href="javascript:;" id="left">&lt;</a>
+										<div id="list">
+											<ul>
+												<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n5/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n5/jfs/t5962/285/8985295681/380201/c710fd80/598d67afNf1a799ea.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n5/jfs/t7120/98/1691642768/341380/c44e2b50/598d6796Ned08853c.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n5/jfs/t5962/285/8985295681/380201/c710fd80/598d67afNf1a799ea.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n5/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n5/jfs/t5962/285/8985295681/380201/c710fd80/598d67afNf1a799ea.jpg" alt=""></li>
 											</ul>
 										</div>
-										<a href="javascript:;" id="right" class="spec-control"></a>
+										<a href="javascript:;" id="right">&gt;</a>
 									</div>
 								</div>
 								<div class="short-share clear ">
@@ -368,8 +371,252 @@
 									</div>
 								</div>
 							</div>
-							<div class="fl item-inner"></div>
+							<div class="fl item-inner">
+								<div id="itemInfo">
+									<div id="name">
+										<h1>三体全集123全套共3册(纪念版) 刘慈欣</h1>
+										<div id="p-ad" class="p-ad">正版预售 三体全集123全套共3册(纪念版) 刘慈欣 刘慈欣 著</div>
+										<div class="p-author" id="p-author">
+											<a data-name="刘慈欣" target="_blank" href="//coll.jd.com/fp.html?aid=1003912">刘慈欣</a> 著 </div>
+									</div>
+									<div id="summary">
+										<div id="summary-price">
+											<div class="dt">京东价：</div>
+											<div class="dd"><strong>￥198.70</strong><span>[6.9折]</span><span class="pricing">[定价：<del id="page_maprice">￥288.00</del>]</span></div>
+										</div>
+										<div class="summary-top">
+											<div id="summary2">
+												<div class="dt">促销信息</div>
+												<div class="dd"></div>
+											</div>
+										</div>
+										<div id="summary3">
+											<div class="dt">配送至：</div>
+											<div class="dd"></div>
+										</div>
+										<div id="summary4">
+											<div class="dt">服务：</div>
+											<div class="dd">由
+												<a href="//winxuan.jd.com" target="_blank" class="hl_red">文轩网旗舰店</a>负责发货, 并提供售后服务. </div>
+										</div>
+									</div>
+									<div id="choose"></div>
+								</div>
+							</div>
 							<div class="fl item-ext"></div>
+						</div>
+					</div>
+				</div>
+				<div class="box2">
+					<div class="wrap">
+						<div class="renqi">
+							<a href="#">人气单品</a>
+						</div>
+						<div class="mclist">
+							<ul>
+								<li><img src="//img14.360buyimg.com/n3/jfs/t7882/186/4333733658/167177/8ef04f6d/5a0d4b39Na9716027.jpg"></li>
+								<li><img src="//img11.360buyimg.com/n3/jfs/t11653/77/1763229661/101649/52807aec/5a09012fN20a5c3e5.jpg"></li>
+								<li><img src="//img12.360buyimg.com/n3/g10/M00/1C/05/rBEQWVNa2N0IAAAAAAEznvs1kRcAAFhegPlVy8AATO2530.jpg"></li>
+								<li><img src="//img14.360buyimg.com/n3/jfs/t13399/110/252239387/110141/1833dee2/5a251039N57ff50db.jpg"></li>
+								<li><img src="https://img14.360buyimg.com/n3/jfs/t6991/330/2421412664/4853/a89383dc/598bf9d9N668546bd.jpg"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div id="footer">
+					<div class="mod_service">
+						<div class="wrap">
+							<ul class="mod_service_list clear">
+								<li class="mod_service_item">
+									<div class="mod_service_unit">
+										<h5 class="mod_service_tit mod_service_duo">多</h5>
+										<p class="mod_service_txt">品类齐全，轻松购物</p>
+									</div>
+								</li>
+								<li class="mod_service_item">
+									<div class="mod_service_unit">
+										<h5 class="mod_service_tit mod_service_kuai">快</h5>
+										<p class="mod_service_txt">多仓直发，极速配送</p>
+									</div>
+								</li>
+								<li class="mod_service_item">
+									<div class="mod_service_unit">
+										<h5 class="mod_service_tit mod_service_hao">好</h5>
+										<p class="mod_service_txt">正品行货，精致服务</p>
+									</div>
+								</li>
+								<li class="mod_service_item">
+									<div class="mod_service_unit">
+										<h5 class="mod_service_tit mod_service_sheng">省</h5>
+										<p class="mod_service_txt">天天低价，畅选无忧</p>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+					<div class="mod_help" clstag="h|keycount|2016|42">
+						<div class="wrap">
+							<div class="mod_help_list">
+								<div class="mod_help_nav">
+									<h5 class="mod_help_nav_tit">购物指南</h5>
+									<ul class="mod_help_nav_con">
+										<li>
+											<a href="//help.jd.com/user/issue/list-29.html" target="_blank">购物流程</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-151.html" target="_blank">会员介绍</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-297.html" target="_blank">生活旅行</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue.html" target="_blank">常见问题</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-136.html" target="_blank">大家电</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/index.html" target="_blank">联系客服</a>
+										</li>
+									</ul>
+								</div>
+								<div class="mod_help_nav">
+									<h5 class="mod_help_nav_tit">配送方式</h5>
+									<ul class="mod_help_nav_con">
+										<li>
+											<a href="//help.jd.com/user/issue/list-81-100.html" target="_blank">上门自提</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-81.html" target="_blank">211限时达</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/103-983.html" target="_blank">配送服务查询</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/109-188.html" target="_blank">配送费收取标准</a>
+										</li>
+										<li>
+											<a href="//en.jd.com/chinese.html" target="_blank">海外配送</a>
+										</li>
+									</ul>
+								</div>
+								<div class="mod_help_nav">
+									<h5 class="mod_help_nav_tit">支付方式</h5>
+									<ul class="mod_help_nav_con">
+										<li>
+											<a href="//help.jd.com/user/issue/list-172.html" target="_blank">货到付款</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-173.html" target="_blank">在线支付</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-176.html" target="_blank">分期付款</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-174.html" target="_blank">邮局汇款</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-175.html" target="_blank">公司转账</a>
+										</li>
+									</ul>
+								</div>
+								<div class="mod_help_nav">
+									<h5 class="mod_help_nav_tit">售后服务</h5>
+									<ul class="mod_help_nav_con">
+										<li>
+											<a href="//help.jd.com/user/issue/321-981.html" target="_blank">售后政策</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-132.html" target="_blank">价格保护</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/130-978.html" target="_blank">退款说明</a>
+										</li>
+										<li>
+											<a href="//myjd.jd.com/repair/repairs.action" target="_blank">返修/退换货</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-50.html" target="_blank">取消订单</a>
+										</li>
+									</ul>
+								</div>
+								<div class="mod_help_nav">
+									<h5 class="mod_help_nav_tit">特色服务</h5>
+									<ul class="mod_help_nav_con">
+										<li>
+											<a href="//help.jd.com/user/issue/list-133.html" target="_blank">夺宝岛</a>
+										</li>
+										<li>
+											<a href="//help.jd.com/user/issue/list-134.html" target="_blank">DIY装机</a>
+										</li>
+										<li>
+											<a href="//fuwu.jd.com/" target="_blank">延保服务</a>
+										</li>
+										<li>
+											<a href="//o.jd.com/market/index.action" target="_blank">京东E卡</a>
+										</li>
+										<li>
+											<a href="//mobile.jd.com/" target="_blank">京东通信</a>
+										</li>
+										<li>
+											<a href="//s.jd.com/" target="_blank">京东JD+</a>
+										</li>
+									</ul>
+								</div>
+								<div class="mod_help_cover">
+									<h5 class="mod_help_cover_tit">京东自营覆盖区县</h5>
+									<div class="mod_help_cover_con">
+										<p class="mod_help_cover_info">京东已向全国2661个区县提供自营配送服务，支持货到付款、POS机刷卡和售后上门服务。</p>
+										<p class="mod_help_cover_more">
+											<a href="//help.jd.com/user/issue/103-983.html" target="_blank">查看详情<i class="iconfont"></i></a>
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="mod_copyright">
+						<div class="wrap mod_copyright_inner">
+							<p class="mod_copyright_links">
+								<a href="//about.jd.com" target="_blank">关于我们</a><span class="mod_copyright_split">|</span>
+								<a href="//about.jd.com/contact" target="_blank">联系我们</a><span class="mod_copyright_split">|</span>
+								<a href="//help.jd.com/user/custom.html" target="_blank">联系客服</a><span class="mod_copyright_split">|</span>
+								<a href="//vc.jd.com/cooperation.html" target="_blank">合作招商</a><span class="mod_copyright_split">|</span>
+								<a href="//helpcenter.jd.com/venderportal/index.html" target="_blank">商家帮助</a><span class="mod_copyright_split">|</span>
+								<a href="//jzt.jd.com" target="_blank">营销中心</a><span class="mod_copyright_split">|</span>
+								<a href="//app.jd.com/" target="_blank">手机京东</a><span class="mod_copyright_split">|</span>
+								<a href="//club.jd.com/links.aspx" target="_blank">友情链接</a><span class="mod_copyright_split">|</span>
+								<a href="//media.jd.com/" target="_blank">销售联盟</a><span class="mod_copyright_split">|</span>
+								<a href="//club.jd.com/" target="_blank">京东社区</a><span class="mod_copyright_split">|</span>
+								<a href="//sale.jd.com/act/FTrWPesiDhXt5M6.html" target="_blank">风险监测</a><span class="mod_copyright_split">|</span>
+								<a href="//about.jd.com/privacy/" target="_blank">隐私政策</a><span class="mod_copyright_split">|</span>
+								<a href="//gongyi.jd.com" target="_blank">京东公益</a><span class="mod_copyright_split">|</span>
+								<a href="//en.jd.com/" target="_blank">English Site</a><span class="mod_copyright_split">|</span>
+								<a href="//corporate.jd.com" target="_blank">Media &amp; IR</a>
+							</p>
+							<div class="mod_copyright_info">
+								<p>
+									<a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11000002000088" target="_blank">京公网安备 11000002000088号</a><span class="mod_copyright_split">|</span><span>京ICP证070359号</span><span class="mod_copyright_split">|</span>
+									<a href="//img14.360buyimg.com/da/jfs/t256/349/769670066/270505/3b03e0bb/53f16c24N7c04d9e9.jpg" target="_blank">互联网药品信息服务资格证编号(京)-经营性-2014-0008</a><span class="mod_copyright_split">|</span><span>新出发京零&nbsp;字第大120007号</span></p>
+								<p><span>互联网出版许可证编号新出网证(京)字150号</span><span class="mod_copyright_split">|</span>
+									<a href="//sale.jd.com/act/pQua7zovWdJfcIn.html" target="_blank">出版物经营许可证</a><span class="mod_copyright_split">|</span>
+									<a href="//misc.360buyimg.com/wz/wlwhjyxkz.jpg" target="_blank">网络文化经营许可证京网文[2014]2148-348号</a><span class="mod_copyright_split">|</span><span>违法和不良信息举报电话：4006561155</span></p>
+								<p><span>Copyright&nbsp;©&nbsp;2004&nbsp;-&nbsp;2017&nbsp;&nbsp;京东JD.com&nbsp;版权所有</span><span class="mod_copyright_split">|</span><span>消费者维权热线：4006067733</span>
+									<a href="//sale.jd.com/act/7Y0Rp81MwQqc.html" target="_blank" class="mod_copyright_license">经营证照</a>
+								</p>
+								<p><span>京东旗下网站：</span>
+									<a href="https://www.jdpay.com/" target="_blank">京东支付</a><span class="mod_copyright_split">|</span>
+									<a href="http://www.jcloud.com " target="_blank">京东云</a>
+								</p>
+							</div>
+							<p class="mod_copyright_auth">
+								<a class="mod_copyright_auth_ico mod_copyright_auth_ico_1" href="http://www.hd315.gov.cn/beian/view.asp?bianhao=010202007080200026" target="_blank">经营性网站备案中心</a>
+								<a class="mod_copyright_auth_ico mod_copyright_auth_ico_2" href="https://ss.knet.cn/verifyseal.dll?sn=2008070300100000031&amp;ct=df&amp;pa=294005" target="_blank">可信网站信用评估</a>
+								<a class="mod_copyright_auth_ico mod_copyright_auth_ico_3" href="http://www.cyberpolice.cn/" target="_blank">网络警察提醒你</a>
+								<a class="mod_copyright_auth_ico mod_copyright_auth_ico_4" href="https://search.szfw.org/cert/l/CX20120111001803001836" target="_blank">诚信网站</a>
+								<a class="mod_copyright_auth_ico mod_copyright_auth_ico_5" href="http://www.12377.cn" target="_blank">中国互联网举报中心</a>
+								<a class="mod_copyright_auth_ico mod_copyright_auth_ico_6" href="http://www.12377.cn/node_548446.htm" target="_blank">网络举报APP下载</a>
+							</p>
 						</div>
 					</div>
 				</div>
