Signed-off-by: xuxu713 <190159372@qq.com>

--- a/details.html
+++ b/details.html
@@ -343,19 +343,19 @@
 									<div id="bf">
 										<img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt="" id="bpic">
 									</div>
-									<div id="ulist">
+									<div id="ulist" class="clear">
 										<a href="javascript:;" id="left">&lt;</a>
 										<div id="list">
-											<ul>
-												<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt=""></li>
+											<ul class="clear">
 												<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg" alt=""></li>
-												<li><img src="//img10.360buyimg.com/n5/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt=""></li>
-												<li><img src="//img10.360buyimg.com/n5/jfs/t5962/285/8985295681/380201/c710fd80/598d67afNf1a799ea.jpg" alt=""></li>
-												<li><img src="//img10.360buyimg.com/n5/jfs/t7120/98/1691642768/341380/c44e2b50/598d6796Ned08853c.jpg" alt=""></li>
-												<li><img src="//img10.360buyimg.com/n5/jfs/t5962/285/8985295681/380201/c710fd80/598d67afNf1a799ea.jpg" alt=""></li>
-												<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg" alt=""></li>
-												<li><img src="//img10.360buyimg.com/n5/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt=""></li>
-												<li><img src="//img10.360buyimg.com/n5/jfs/t5962/285/8985295681/380201/c710fd80/598d67afNf1a799ea.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n0/jfs/t7120/98/1691642768/341380/c44e2b50/598d6796Ned08853c.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n0/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n0/jfs/t6790/103/2638974776/309807/270f969e/598d67adNc1044ffc.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n0/jfs/t5962/285/8985295681/380201/c710fd80/598d67afNf1a799ea.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n0/jfs/t7120/211/1714623578/58996/c5074737/598d59b7N820df07c.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n0/jfs/t7120/98/1691642768/341380/c44e2b50/598d6796Ned08853c.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n0/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt=""></li>
+												<li><img src="//img10.360buyimg.com/n0/jfs/t6790/103/2638974776/309807/270f969e/598d67adNc1044ffc.jpg" alt=""></li>
 											</ul>
 										</div>
 										<a href="javascript:;" id="right">&gt;</a>
@@ -398,6 +398,9 @@
 											<div class="dt">服务：</div>
 											<div class="dd">由
 												<a href="//winxuan.jd.com" target="_blank" class="hl_red">文轩网旗舰店</a>负责发货, 并提供售后服务. </div>
+										</div>
+										<div id="summary5-cart">
+											<a class="btn-append" href="#">加入购物车<b></b></a>
 										</div>
 									</div>
 									<div id="choose"></div>
@@ -621,10 +624,9 @@
 					</div>
 				</div>
 			</div>
+		</div>
 	</body>
 	<script src="js/jquery-1.11.3.js " type="text/javascript "></script>
-	<script src="js/index.js " type="text/javascript "></script>
-	<script src="js/index-search.js " type="text/javascript "></script>
-	<script src="js/details.js " type="text/javascript "></script>
+	<script src="js/require.js" data-main="js/main" type="text/javascript" async="ture" defer></script>
 
 </html>
