--- a/register.html
+++ b/register.html
@@ -32,7 +32,8 @@
 					<div class="main clear">
 						<!--个人注册表单-->
 						<div class="reg-form">
-							<form action="JD20171206/php/register.php" method="post"  onsubmit="return false;">
+							<form action="php/register.php" method="post"  onsubmit="return false">
+							<!--<form action="JD20171206/php/register.php" method="post"  >-->
 							<!--<form action="php/register.php" method="post">-->
 								<div class="line">
 									<!--输入框的div，class都设置为form-item-->
