--- a/test.html
+++ b/test.html
@@ -5,306 +5,113 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<style>
-			.wwrap {
-				position: relative;
-				width: 1000px;
-				height: 470px;
-			}
-			.spic-n1 {
-				width: 350px;
-				height: 350px;
-				margin: 14px 0 14px 14px;
-				position: relative;
-				float: left;
+			* {
+				margin: 0;
+				padding: 0;
+				list-style: none;
 			}
 			
-			.spic-n1 img {
-				width: 350px;
-				height: 350px;
+			.wrap {
+				width: 1210px;
+				margin: 0 auto;
 			}
-			#sf {
-				width: 50px;
-				height: 50px;
-				background: orange;
-				opacity: 0.3;
+			
+			.findgoods {
+				height: 444px;
+				display: flex;
+				justify-content: space-around;
+			}
+			
+			p {
+				background: #4998a1;
+				height: 55px;
+				line-height: 55px;
+				color: white;
+				font-size: 26px;
+				font-weight: bold;
+				text-indent: 30px;
+				border-radius: 10px;
+			}
+			
+			div {
+				width: 30%;
+			}
+			
+			ul {
+				display: flex;
+				flex-wrap: wrap;
+				padding: 5px;
+			}
+			
+			li {
+				border-bottom: 1px solid #CCCCCC;
+				display: flex;
+				width: 50%;
+				height: 120px;
+				position: relative;
+			}
+			
+			span {
+				font-size: 12px;
+				color: #4998a1;
 				position: absolute;
-				left: 0px;
-				top: 0px;
+				top: 15px;
+				left: 20px;
+				width: 80px;
+				line-height: 20px;
+				/*padding:5px;*/
 			}
-			
-			.wwrap #bf {
-				width: 500px;
-				height: 400px;
-				border: 1px solid #000;
-				float: left;
-				overflow: hidden;
-				position: relative;
-				left: 10px;
-			}
-			
-			.wwrap #bf img {
-				position: absolute;
-				left: 0px;
-				top: 0px;
-			}
-			
 			img {
-				border: 0;
-				vertical-align: middle;
-			}
-			
-			
-			
-			
-			
-			.spec-list {
 				position: absolute;
-				top: 390px;
-				width: 310px;
-				height: 54px;
-				overflow: hidden;
-				padding: 0 20px 0 34px;
+				bottom: 5px;
+				right: 10px;
+				width: 80px;
+				height: 80px;
 			}
 			
-			.spec-list .spec-control {
-				display: block;
-				position: absolute;
-				top: 0;
-				width: 14px;
-				height: 54px;
-				background: url("img/newicon20140910.png") no-repeat 0 0;
-			}
-			
-			.spec-list .spec-items {
-				position: absolute;
-				width: 310px;
-				height: 54px;
-				overflow: hidden;
-				top: 0;
-				left: 36px;
-			}
-			
-			.spec-list ul {
-				position: absolute;
-				width: 372px;
-				height: 54px;
-				top: 0px;
-				left: 0px;
-			}
-			
-			.spec-list li {
-				width: 62px;
-				text-align: center;
-				font-size: 0;
-				position: relative;
-				float: left;
-			}
-			
-			.spec-list li img {
-				width: 50px;
-				height: 50px;
-				padding: 2px;
-				display: block;
-			}
-			
-			.spec-list #left {
-				left: 14px;
-				background-position: -56px -346px;
-			}
-			
-			.spec-list #right {
-				right: 0;
-				background-position: -14px -346px;
-			}
-			
-			.report-btn {
-				font-size: 12px;
-			}
-			
-			.short-share {
-				padding: 0 40px 0 34px;
-			}
-			
-			.short-share em {
-				font-size: 12px;
-			}
-			
-			.short-share b {
-				position: absolute;
-				display: inline-block;
-				background: url(//static.360buyimg.com/item/main/1.0.38/css/i/newicon20140910.png) no-repeat 0 0;
-			}
-			
-			.share-list {
-				padding: 0 10px 0 17px;
-				position: relative;
-				display: block;
-			}
-			
-			.share-list b {
-				top: 2px;
-				left: 0;
-				height: 12px;
-				overflow: hidden;
-				width: 12px;
-				background-position: -162px -296px;
-			}
-			
-			.choose-btn-coll {
-				padding-left: 18px;
-				position: relative;
-				display: block;
-			}
-			
-			.choose-btn-coll b {
-				background-position: -177px -296px;
-				width: 14px;
-				height: 14px;
-				top: 3px;
-				margin-left: -15px;
-			}
-			
-			.item-inner {
-				padding-right: 244px;
-				width: 588px;
-			}
-			
-			.item-ext {
-				width: 244px;
-				float: left;
-				margin-left: -244px;
-				overflow: hidden;
-				background: #fff;
+			span,
+			img {
+				width: 50%;
 			}
 		</style>
 
-		<script src="js/jquery-1.11.3.js"></script>
 	</head>
 
 	<body>
-		<div class="fl preview">
-			<div class="wwrap">
-				<div id="spic" class="spic-n1">
-					<img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg" alt=" ">
-					<div id="sf"></div>
+		<div>
+			<div class="wrap findgoods">
+				<div>
+					<p>发现好货</p>
+					<ul>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
 				</div>
-				<div id="bf">
-					<img src="//img10.360buyimg.com/n0/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg" alt=" " id="bpic">
+				<div>
+					<p>发现好货</p>
+					<ul>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
 				</div>
-				<div class="spec-list" id="ulist">
-					<a href="javascript:;" id="left" class="spec-control"></a>
-					<a href="javascript:;" id="right" class="spec-control"></a>
-					<div class="spec-items" id="list">
-						<ul class="clear">
-							<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-							<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-							<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-							<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-							<li><img src="//img10.360buyimg.com/n1/jfs/t6889/202/2673127802/393339/6c3a0193/598d67acNa211a967.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-							<li><img src="//img10.360buyimg.com/n5/jfs/t10960/280/1058050418/192620/89f2ef91/59dc2b85Ndd8ff0bb.jpg " alt="三体全集123全套共3册(纪念版) 刘慈欣 "></li>
-						</ul>
-					</div>
+				<div>
+					<p>发现好货</p>
+					<ul>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
+						<li><span>贵州茅台酒</span><img src="https://img10.360buyimg.com/mobilecms/s80x80_jfs/t4210/8/1260174593/104281/eb7fd816/58bf6faaN57a9cd2d.jpg!q90.webp"></li>
 				</div>
 			</div>
 		</div>
-		<script>
-			function magnifier() {
-				var $spic = $('#spic');
-				var $sf = $('#sf');
-				var $bf = $('#bf');
-				var $bpic = $('#bpic');
-				var $left = $('#left');
-				var $right = $('#right');
-				var $num = 6;
-				var $list = $('#list li');
-				var $ul = $('#list ul');
-				$spic.hover(function(ev) {
-					$sf.show();
-					$bf.show();
-					$bpic.show();
-					$sf.width($bf.width() * $spic.width() / $bpic.width());
-					console.log($bf.width());//500
-					console.log($bpic.width());//350
-					console.log($spic.width());//350
-					
-					console.log($sf.width());//500
-					$sf.height($bf.height() * $spic.height() / $bpic.height());
-					$(document).on('mousemove', function(ev) {
-						var $l = ev.clientX - $spic.offset().left - ($sf.width() / 2);
-						var $t = ev.clientY - $spic.offset().top - ($sf.height() / 2);
-						var $scale = $bpic.width() / $spic.width();
-						if($l <= 0) {
-							$l = 0;
-						}
-						if($l >= $spic.width() - $sf.width()) {
-							$l = $spic.width() - $sf.width();
-						}
-						if($t <= 0) {
-							$t = 0;
-						}
-						if($t >= $spic.height() - $sf.height()) {
-							$t = $spic.height() - $sf.height();
-						}
-						$sf.css({
-							left: $l,
-							top: $t
-						});
-						$bpic.css({
-							left: -$scale * $l,
-							top: -$scale * $t
-						})
-					});
-				}, function() {
-					$sf.hide();
-					$bf.hide();
-					$bpic.hide();
-				});
-				if($num >= $list.length) {
-					$right.css({
-						color: '#fff'
-					})
-				}
-				$right.on('click', function() {
-					if($num < $list.length) {
-						$num++;
-						if($num == $list.length) {
-							$right.css({
-								color: '#fff'
-							});
-						}
-						$left.css({
-							color: '#333'
-						})
-					}
-					$ul.animate({
-						left: -$list.innerWidth() * ($num - 6)
-					}, 100);
-				});
-				$left.on('click', function() {
-					if($num > 6) {
-						$num--;
-						if($num == 6) {
-							$left.css({
-								color: '#fff'
-							});
-						}
-						$right.css({
-							color: '#333'
-						});
-					}
-					$ul.animate({
-						left: -$list.innerWidth() * ($num - 6)
-					}, 100)
-				});
-				$list.on('click', function() {
-					var $src = $(this).children('img').attr('src');
-					$('#spic img').attr('src', $src);
-					$('#bpic').attr('src', $src);
-				});
-			}
-			magnifier();
-		</script>
-
 	</body>
 
 </html>
